--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 		<hibernate.version>4.3.0.Final</hibernate.version>
 		<osjdk.version>3.2.1</osjdk.version>
 		<lombok.version>1.16.6</lombok.version>
+		<java.version>8</java.version>
 	</properties>
-	
+
 	<dependencies>
 		<!-- mybatis -->
 		<dependency>
@@ -44,11 +45,11 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
-		<dependency>  
-            <groupId>org.springframework</groupId>  
-            <artifactId>spring-test</artifactId>  
-            <version>${spring.version}</version>  
+
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
@@ -74,7 +75,7 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
@@ -89,7 +90,7 @@
             <version>1.2.16</version>
         </dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>order</finalName>
 		<plugins>
