--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.8.1</version>
 				<configuration>
 					<encoding>utf8</encoding>
+						<source>8</source>
+						<target>8</target>
 				</configuration>
 			</plugin>
 			<plugin>
